deploy: 876e3592fc0962d19bcd36e175134032b42978d3

--- a/latex/game_8h_source.tex
+++ b/latex/game_8h_source.tex
@@ -16,9 +16,9 @@
 \DoxyCodeLine{12 }
 \DoxyCodeLine{13 \textcolor{keyword}{typedef} \textcolor{keyword}{struct }\mbox{\hyperlink{structGameFlags__I}{GameFlags\_I}} \{}
 \DoxyCodeLine{14     uint32\_t running:1;}
-\DoxyCodeLine{15     uint32\_t draw:1;}
-\DoxyCodeLine{16     uint32\_t clear:1;}
-\DoxyCodeLine{17     uint32\_t show\_topbar:1;}
+\DoxyCodeLine{15     uint32\_t paused:1;}
+\DoxyCodeLine{16     uint32\_t draw:1;}
+\DoxyCodeLine{17     uint32\_t clear:1;}
 \DoxyCodeLine{18 \} \mbox{\hyperlink{structGameFlags__I}{GameFlags}};}
 \DoxyCodeLine{19 }
 \DoxyCodeLine{20 \textcolor{keyword}{typedef} \textcolor{keyword}{struct }\mbox{\hyperlink{structGame__I}{Game\_I}} \{}
