--- a/latex/structGameFlags__I.tex
+++ b/latex/structGameFlags__I.tex
@@ -6,14 +6,14 @@
 \mbox{\Hypertarget{structGameFlags__I_a02ccbe095face474ccd126cc1a5907e5}\label{structGameFlags__I_a02ccbe095face474ccd126cc1a5907e5}} 
 uint32\+\_\+t {\bfseries running}\+:1
 \item 
+\mbox{\Hypertarget{structGameFlags__I_a606e51d1af77e245060073e5f19d795a}\label{structGameFlags__I_a606e51d1af77e245060073e5f19d795a}} 
+uint32\+\_\+t {\bfseries paused}\+:1
+\item 
 \mbox{\Hypertarget{structGameFlags__I_af24e158049e0bfbc14057bd75db2bdcf}\label{structGameFlags__I_af24e158049e0bfbc14057bd75db2bdcf}} 
 uint32\+\_\+t {\bfseries draw}\+:1
 \item 
 \mbox{\Hypertarget{structGameFlags__I_ac378a4c31fc3ca97e03b76ad83a401ba}\label{structGameFlags__I_ac378a4c31fc3ca97e03b76ad83a401ba}} 
 uint32\+\_\+t {\bfseries clear}\+:1
-\item 
-\mbox{\Hypertarget{structGameFlags__I_a835e5d7ddba8ff5b15660fd6a44a6910}\label{structGameFlags__I_a835e5d7ddba8ff5b15660fd6a44a6910}} 
-uint32\+\_\+t {\bfseries show\+\_\+topbar}\+:1
 \end{DoxyCompactItemize}
 
 
