--- a/latex/structComponent__I.tex
+++ b/latex/structComponent__I.tex
@@ -25,6 +25,8 @@ SDL\+\_\+\+Color \mbox{\hyperlink{structComponent__I_af06fbad19f19941e0bd4b7e6be
 \item 
 SDL\+\_\+\+Color \mbox{\hyperlink{structComponent__I_a0b52558e83a68e74e39f63a6d8d67817}{bg\+\_\+color}}
 \item 
+int \mbox{\hyperlink{structComponent__I_a16fc451bbff9c990fac823f57555f5f1}{bg\+\_\+alpha}}
+\item 
 Draw\+Priority \mbox{\hyperlink{structComponent__I_ad012d0e30bb4b8b703e7e331d4968bef}{priority}}
 \end{DoxyCompactItemize}
 
@@ -33,7 +35,13 @@ Draw\+Priority \mbox{\hyperlink{structComponent__I_ad012d0e30bb4b8b703e7e331d496
 Structure principale d\textquotesingle{}un Component 
 
 \doxysubsection{Documentation des données membres}
-\mbox{\Hypertarget{structComponent__I_a0b52558e83a68e74e39f63a6d8d67817}\label{structComponent__I_a0b52558e83a68e74e39f63a6d8d67817}} 
+\mbox{\Hypertarget{structComponent__I_a16fc451bbff9c990fac823f57555f5f1}\label{structComponent__I_a16fc451bbff9c990fac823f57555f5f1}} 
+\index{Component\_I@{Component\_I}!bg\_alpha@{bg\_alpha}}
+\index{bg\_alpha@{bg\_alpha}!Component\_I@{Component\_I}}
+\doxysubsubsection{\texorpdfstring{bg\_alpha}{bg\_alpha}}
+{\footnotesize\ttfamily int Component\+\_\+\+I\+::bg\+\_\+alpha}
+
+Transparence d\textquotesingle{}arrière-\/plan du Component \mbox{\Hypertarget{structComponent__I_a0b52558e83a68e74e39f63a6d8d67817}\label{structComponent__I_a0b52558e83a68e74e39f63a6d8d67817}} 
 \index{Component\_I@{Component\_I}!bg\_color@{bg\_color}}
 \index{bg\_color@{bg\_color}!Component\_I@{Component\_I}}
 \doxysubsubsection{\texorpdfstring{bg\_color}{bg\_color}}
